tag: 0.2.1. Removed old files.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Barbara-Blomberg-Volume-07_5567
-_version: 0.2.0
+_version: 0.2.1
 contributor:
   translator:
     agent_name: Safford, Mary J.
@@ -34,5 +34,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'German fiction -- Translations into English'
 - !lcsh 'Holy Roman Empire -- History -- Charles V, 1519-1556 -- Fiction'
+- GITenberg
 title: Barbara Blomberg — Volume 07
 url: http://www.gutenberg.org/ebooks/5567
